--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,8 +33,9 @@ bind-key -r Up resize-pane -U 5
 set-option -g status-keys vi               # Use vi-style key bindings in status
 
 # Mouse Selection to Clipboard
-unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+# unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+# bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xargs printf "%s" | tmux load-buffer - && tmux paste-buffer -d"
+# this for macos: bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
 # Copy Mode Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
