--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,6 +36,8 @@ set-option -g status-keys vi               # Use vi-style key bindings in status
 # unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
 # bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xargs printf "%s" | tmux load-buffer - && tmux paste-buffer -d"
 # this for macos: bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+# copy to local macos: tmux save-buffer - | ssh user@your_local_machine_ip 'cat | pbcopy'
+# copy to other remote server: tmux save-buffer - | ssh user@your_local_machine_ip 'cat | xclip -i -selection clipboard'
 
 # Copy Mode Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
